CRMT2 fix top-bar on mobile (same widget.css-override needed as in default theme)

--- a/static/themes/CRMT2/style.css
+++ b/static/themes/CRMT2/style.css
@@ -321,6 +321,12 @@ aside .form-container input[type=radio] + label:before {
     padding: 0;
 }
 
+/* Override widget.css .expanded-selector for top bar */
+.top-bar .expanded {
+    float: none;
+    width: auto;
+}
+
 /* END */
 
 .row .row {
